# cane

./: .gitignore  CMakeLists.txt  README.md
asset/: sum.cn  test.cn
include/: cane.lpp  lexertil.hh  parser.hh
lib/scripts/: trim_gen.sh
src/: main.cc
